<resources>
    <string name="app_name">E-Learning App</string>

    <string name="continue_as_student">Continue as student</string>
    <string name="continue_as_doctor">Continue as instructor</string>
    <string name="next">next</string>

    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="create_new_account">Create account</string>
    <string name="name">Name</string>
    <string name="sign_up">sign up</string>
    <string name="requried">Required</string>
    <string name="back_to_select_your_type">Back to select your type</string>
    <string name="course_id">Course Id</string>
    <string name="create_a_new_course">Create a new course</string>
    <string name="course_name">Course name</string>
    <string name="quiz_grade">Quiz grade</string>
    <string name="confirm">Confirm</string>
    <string name="no_courses">No Courses</string>
    <string name="enter_message">Enter message</string>
    <string name="doctor_control_page">Instructor control page</string>
    <string name="attandance">Attandance</string>
    <string name="quiz">Quiz</string>
    <string name="materials">Materials</string>
    <string name="grades">Grades</string>
    <string name="open">Open</string>
    <string name="id">ID:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_e_mail">Student E-mail</string>
    <string name="upload_pdf">Upload pdf</string>
    <string name="click_to_select_pdf">Click to select pdf +</string>
    <string name="show_files">View PDF files</string>
    <string name="pdf_name">PDF Name</string>
    <string name="create_mcq_quiz">Create Mcq Quiz</string>
    <string name="your_question">Your Question</string>
    <string name="choose_1">choose 1</string>
    <string name="choose_2">choose 2</string>
    <string name="choose_4">choose 4</string>
    <string name="next_question">Next Question</string>
    <string name="upload_quiz">Upload Quiz</string>
    <string name="generate_code">Generate Code</string>
    <string name="chat">Chat</string>
    <string name="solve_quiz">Solve quiz</string>
    <string name="active">Active</string>
    <string name="your_grades_quiz">Your Grades Quiz</string>
    <string name="total_grades_in_all_quizes">Total grades in all quizes : </string>
    <string name="total_attendance_grades">Total Attendance Grades : </string>
    <string name="your_attendance_grades">Your Attendance Grades</string>
    <string name="the_question">The question</string>
    <string name="personal_assistant">personal assistant</string>
    <string name="helper">Helper</string>
    <string name="send_a_message">Send a message</string>
    <string name="welcome_to_chat_gpt">Welcome to Chat GPT</string>

</resources>
