<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bacground"
    tools:context=".ui.instructor.quiz.CreateQuizFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:text="@string/create_mcq_quiz"
      android:textColor="@color/primary"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#fff"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:boxStrokeColor="@color/primaryTextColor"
        app:boxStrokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.039">

        <EditText
            android:id="@+id/enter_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_question" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_back_ground_black"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
        app:layout_constraintVertical_bias="0.066">


        <EditText
            android:id="@+id/answer1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1.8"
            android:background="@drawable/button_back_ground_black"
            android:hint="choose 1"
            android:textSize="13sp" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />

        <CheckBox
            android:id="@+id/check_box_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"

            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_back_ground_black"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        android:weightSum="3.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.063">

        <CheckBox
            android:id="@+id/check_box_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.8" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />

        <EditText
            android:id="@+id/answer2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1.8"
            android:background="@drawable/button_back_ground_black"
            android:hint="@string/choose_2"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_back_ground_black"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.122">


        <EditText
            android:id="@+id/answer3"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1.8"
            android:background="@drawable/button_back_ground_black"
            android:hint="choose 3"
            android:textSize="13sp" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />

        <CheckBox
            android:id="@+id/check_box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_back_ground_black"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.116">

        <CheckBox
            android:id="@+id/check_box_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />


        <EditText
            android:id="@+id/answer4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1.8"
            android:background="@drawable/button_back_ground_black"
            android:hint="@string/choose_4"
            android:textSize="13sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/nextQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:src="@drawable/nextque"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/linearLayout6" />

    <TextView
        android:id="@+id/txtNextQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/nextQuestion"
        app:layout_constraintStart_toStartOf="@+id/nextQuestion"

        app:layout_constraintTop_toBottomOf="@+id/nextQuestion" />



    <FrameLayout
        android:id="@+id/frameee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="68dp"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNextQuestion"
        app:layout_constraintWidth_percent="0.70">

        <Button
            android:id="@+id/btn_upload_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:onClick="upload"
            android:text="@string/upload_quiz"
            android:textStyle="bold"
            android:layout_margin="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/txtNextQuestion"/>



        <RelativeLayout
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@drawable/back_progressbar"
            android:elevation="5dp"
            android:padding="20dp"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>